--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Street Fighter Hadouken!</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
@@ -11,14 +11,14 @@
 
 <body>
 	<div class="main">
-		
+		<aside id="instructions">
+			<h1>Click on Ryu for a Hadouken! Press X on your keyboard for his cool pose! #swagg #YOLO</h1>
+		</aside>
 		<div class="ryu">
-			<div class="ryu-still">
-			</div>
-			<div class="ryu-ready">
-			</div>
-			<div class="ryu-throwing">
-			</div>
+			<div class="ryu-still"></div>
+			<div class="ryu-ready"></div>
+			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>
 		</div>
 		
 		<div class="hadouken">
