closed audio element in html

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		</div>
 
 	</div>
-	<audio id="hadouken-sound" src="sound/hadouken.mp3">
+	<audio id="hadouken-sound" src="sound/hadouken.mp3"></audio>
 </body>
 
 </html>
